WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191673
REGRESSION(
r238090
): Composited iframe contents disappear after switching tabs in Safari
https://bugs.webkit.org/show_bug.cgi?id=191673
Summary
REGRESSION(r238090): Composited iframe contents disappear after switching tab...
Simon Fraser (smfr)
Reported
2018-11-14 22:25:10 PST
Composited iframe contents disappear after switching tabs in Safari
Attachments
Patch
(2.47 KB, patch)
2018-11-14 22:29 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(2.50 KB, patch)
2018-11-14 22:32 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-11-14 22:29:01 PST
Created
attachment 354889
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-11-14 22:29:04 PST
<
rdar://problem/46083440
>
Simon Fraser (smfr)
Comment 3
2018-11-14 22:32:35 PST
Created
attachment 354890
[details]
Patch
WebKit Commit Bot
Comment 4
2018-11-15 07:57:23 PST
Comment on
attachment 354890
[details]
Patch Clearing flags on attachment: 354890 Committed
r238229
: <
https://trac.webkit.org/changeset/238229
>
WebKit Commit Bot
Comment 5
2018-11-15 07:57:25 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 6
2018-11-15 16:32:06 PST
Adding a test via
bug 191725
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug